2009-08-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:	[Bug 2806250] Prevent the storage of strings
	starting with ~ in the "tail" part (normPathPtr field) of the path
	intrep when PATHFLAGS != 0.  This establishes the assumptions relied
	on elsewhere that the name stored there is a relative path.  Also
	refactored to make an AppendPath() routine instead of the cut/paste
	stanzas that were littered throughout.

2009-08-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdIL.c (Tcl_LsortObjCmd): Plug memory leak.

2009-08-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:	[Bug 2837800]: Added NULL check to prevent
	* tests/fileName.test:	crashes during [glob].

2009-08-06  Andreas Kupries  <andreask@activestate.com>

	* doc/refchan.n [Bug 2827000]: Extended the implementation of
	* generic/tclIORChan.c: reflective channels (TIP 219, method 'read'),
	* tests/ioCmd.test: enabling handlers to signal EAGAIN to indicate 'no
	data, but not at EOF either', and other system errors. Updated
	documentation, extended testsuite (New test cases iocmd*-23.{9,10}).

2009-08-02  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tclUnixFCmd.c (GetOwnerAttribute, SetOwnerAttribute)
	(GetGroupAttribute, SetGroupAttribute): [Bug 1942222]: Stop calling
	* unix/tclUnixFile.c (TclpGetUserHome): endpwent() and endgrent();
	they've been unnecessary for ages.

2009-07-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:       [Bug 2830354]: Corrected failure to
	* tests/format.test:            grow buffer when format spec request
	large width floating point values.  Thanks to Clemens Misch.

2009-07-24  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_GetChannelHandle): [Bug 2826248]: Do not crash
	* generic/tclPipe.c (FileForRedirect): for getHandleProc == NULL, this
	is allowed. Provide a nice error message in the bypass area. Updated
	caller to check the bypass for a mesage. Bug reported by Andy